set_source_files_properties(pnl_dlamch.c PROPERTIES COMPILE_FLAGS -O0)
add_library(libamos OBJECT
   amos_wrappers.c
   xerror.c
   zairy.c
   zbesj.c
   zbiry.c
   zdiv.c
   zmlri.c
   zseri.c
   zunhj.c
   zunk1.c
   pnl_d1mach.c
   zabs.c
   zasyi.c
   zbesk.c
   zbknu.c
   zexp.c
   zmlt.c
   zshch.c
   zuni1.c
   zunk2.c
   dgamln.c
   zacai.c
   zbesh.c
   zbesy.c
   zbuni.c
   zkscl.c
   zrati.c
   zsqrt.c
   zuoik.c
   fdump.c
   zacon.c
   zbesi.c
   zbinu.c
   zbunk.c
   zlog.c
   zs1s2.c
   zuchk.c
   zunik.c
   zwrsk.c
   zuni2.c
   pnl_dlamch.c
)
