add_library(libinteg OBJECT
   quadpack_dqage.c
   quadpack_dqagie.c
   quadpack_dqagpe.c
   quadpack_dqagse.c
   quadpack_dqelg.c
   quadpack_dqk15.c
   quadpack_dqk15i.c
   quadpack_dqk21.c
   quadpack_dqk31.c
   quadpack_dqk41.c
   quadpack_dqk51.c
   quadpack_dqk61.c
   quadpack_dqpsrt.c
   quadpack_dqng.c
   rkf45.c
   basic_integ.c
   integ.c
)

