SUBDIRS = 

include $(top_srcdir)/Make.incl
AM_CPPFLAGS = $(PNL_INCLUDES)

noinst_LTLIBRARIES = libinteg.la
libinteg_la_SOURCES =  \
quadpack_dqage.c quadpack_dqagie.c quadpack_dqagpe.c  quadpack_dqagse.c\
quadpack_dqelg.c quadpack_dqk15.c quadpack_dqk15i.c \
quadpack_dqk21.c quadpack_dqk31.c quadpack_dqk41.c quadpack_dqk51.c\
quadpack_dqk61.c  quadpack_dqpsrt.c \
quadpack_dqng.c basic_integ.c integ.c

quadpack_dqawce.c quadpack_dqawfe.c quadpack_dqawoe.c quadpack_dqawse.c\
quadpack_dqc25c.c quadpack_dqc25f.c quadpack_dqc25s.c quadpack_dqcheb.c\
quadpack_dqwgtf.c quadpack_dqwgts.c quadpack_dqk15w.c \
quadpack_dqmomo.c quadpack_dqwgtc.c
