pkgincludedir=$(includedir)/pnl

SUBDIRS= 

include $(top_srcdir)/Make.incl
AM_CPPFLAGS = $(PNL_INCLUDES)

AM_ETAGSFLAGS=-declarations

pkginclude_HEADERS= \
pnl_finance.h					 pnl_specfun.h \
pnl_integration.h     pnl_spec_matrix.h \
pnl_linalgsolver.h    pnl_fft.h \
pnl_list.h						 pnl_root.h            pnl_complex.h \
pnl_mathtools.h					 pnl_tridiag_matrix.h  pnl_random.h \
pnl_matrix_complex.h			 pnl_types.h           pnl_vector_uint.h \
pnl_matrix_double.h   pnl_vector_complex.h \
pnl_band_matrix.h				 pnl_matrix.h          pnl_vector_double.h \
pnl_basis.h						 pnl_matrix_int.h      pnl_vector.h \
pnl_bessel.h					 pnl_matrix_uint.h     pnl_vector_int.h \
pnl_cdf.h						 pnl_perm.h            pnl_laplace.h
